log
Fri 19 Aug 2022 04:35:16 PM UTC: 
 tests:  0|6
total_score: 0/70
f034eb3
Fri 19 Aug 2022 04:38:48 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
df6b551
Fri 19 Aug 2022 04:44:02 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
f698e72
Fri 19 Aug 2022 04:45:22 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
1022e41
Fri 19 Aug 2022 04:50:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
73e985c
Fri 19 Aug 2022 04:50:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b3c3fc2
Fri 19 Aug 2022 04:51:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b03ea0e
Fri 19 Aug 2022 04:53:00 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
29f3ae7
Fri 19 Aug 2022 04:53:22 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
550d965
Fri 19 Aug 2022 04:57:53 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
7ce92d1
Fri 19 Aug 2022 04:59:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c158cc
Fri 19 Aug 2022 04:59:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
653cd44
Fri 19 Aug 2022 05:00:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f986dfd
Fri 19 Aug 2022 05:09:04 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
3a23cab
Fri 19 Aug 2022 05:09:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8284710
Fri 19 Aug 2022 05:10:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
76fa6d5
Fri 19 Aug 2022 05:10:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:15: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   57 |   return (list->next->data);
      |               ^~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8685f81
Fri 19 Aug 2022 05:10:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e8f4b2c
Fri 19 Aug 2022 05:14:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b34ec89
Fri 19 Aug 2022 05:18:45 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
fd8c534
Fri 19 Aug 2022 05:18:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
09c8540
Fri 19 Aug 2022 05:19:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1d58c2c
Fri 19 Aug 2022 05:20:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
29a93b2
Fri 19 Aug 2022 05:20:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4e2c491
Fri 19 Aug 2022 05:21:16 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
47bf082
Fri 19 Aug 2022 05:23:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:63:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   63 |   return 18;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
a11e132
Fri 19 Aug 2022 05:23:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f66b633
Fri 19 Aug 2022 05:27:21 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
43cc2ca
Sun 21 Aug 2022 10:59:20 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:7: error: dereferencing ‘void *’ pointer [-Werror]
   84 |   data->prev=list->head;
      |       ^~
list.c:84:7: error: request for member ‘prev’ in something not a structure or union
list.c:89:7: error: dereferencing ‘void *’ pointer [-Werror]
   89 |   data->prev=NULL;
      |       ^~
list.c:89:7: error: request for member ‘prev’ in something not a structure or union
cc1: all warnings being treated as errors
Compilation failed
e1caa0f
Sun 21 Aug 2022 11:04:52 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:3: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   84 |   Nodo* x=createNode(data);
      |   ^~~~
      |   Node
list.c:84:11: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   84 |   Nodo* x=createNode(data);
      |           ^~~~~~~~~~
list.c:85:4: error: request for member ‘next’ in something not a structure or union
   85 |   x->next=list->head;
      |    ^~
list.c:87:21: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   87 |     list->head->prev=x;
      |                     ^
list.c:89:13: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   89 |   list->head=x;
      |             ^
list.c:90:4: error: request for member ‘prev’ in something not a structure or union
   90 |   x->prev=NULL;
      |    ^~
cc1: all warnings being treated as errors
Compilation failed
cc5095d
Sun 21 Aug 2022 11:05:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9b49f5a
Sun 21 Aug 2022 11:15:45 PM UTC: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:97:9: error: unused variable ‘x’ [-Werror=unused-variable]
   97 |   Node* x=createNode(data);
      |         ^
list.c: In function ‘pushCurrent’:
list.c:108:20: error: comparison between pointer and integer [-Werror]
  108 |     while((posicion<list->current) && (puntero->next){
      |                    ^
list.c:108:54: error: expected ‘)’ before ‘{’ token
  108 |     while((posicion<list->current) && (puntero->next){
      |          ~                                           ^
      |                                                      )
list.c:114:3: error: expected expression before ‘}’ token
  114 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
fd48aba
Sun 21 Aug 2022 11:15:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:97:9: error: unused variable ‘x’ [-Werror=unused-variable]
   97 |   Node* x=createNode(data);
      |         ^
list.c: In function ‘pushCurrent’:
list.c:108:20: error: comparison between pointer and integer [-Werror]
  108 |     while((posicion<list->current) && (puntero->next)){
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
99fbb54
Sun 21 Aug 2022 11:17:40 PM UTC: 
 list.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:97:9: error: unused variable ‘x’ [-Werror=unused-variable]
   97 |   Node* x=createNode(data);
      |         ^
list.c: In function ‘pushCurrent’:
list.c:104:9: error: unused variable ‘x’ [-Werror=unused-variable]
  104 |   Node* x=createNode(data);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
b1076cb
